# ozz_test

./: CMakeLists.txt  README.md
src/ozz_anim/: CMakeLists.txt  ozz_anim.cpp
src/ozz_skin/: CMakeLists.txt  ozz_skin.cpp
